<resources>
    <string name="app_name">businessCard</string>
    <string name="businesscard">BusinessCard</string>
    <string name="my_cards">My cards</string>
    <string name="cd_nome">Nome</string>
    <string name="new_card">New card</string>
    <string name="cd_telefone">telefone</string>
    <string name="cd_email">email</string>
    <string name="cd_empresa">empresa</string>
    <string name="label_show_sucess">Cartão criado</string>
    <string name="esmeralda">Cartão de visitas de funcionários do ramo de marketing digital da Hyper Softwares</string>
    <string name="diamante">Cartão criado</string>
    <string name="rubi">Cartão criado</string>
    <string name="black">Cartão criado</string>
    <string name="nossocartoes">Em nosso aplicativo é permitido a criação de cartões com qualidade premium e designer próprio</string>
    <string name="label_share">Compartilhar</string>


</resources>